Refactored code, changing unnecessary double variables to float